--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=GoogleBiasScrape
+application.title=BiasScrape
 application.vendor=Aale
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,17 +25,17 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/GoogleBiasScrape.jar
+dist.jar=${dist.dir}/BiasScrape.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.c3p0-0.9.1.1.jar=lib\\quartz\\c3p0-0.9.1.1.jar
+file.reference.c3p0-0.9.1.1.jar=lib/quartz/c3p0-0.9.1.1.jar
 file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
-file.reference.log4j-1.2.16.jar=lib\\quartz\\log4j-1.2.16.jar
-file.reference.quartz-2.2.2.jar=lib\\quartz\\quartz-2.2.2.jar
-file.reference.quartz-jobs-2.2.2.jar=lib\\quartz\\quartz-jobs-2.2.2.jar
-file.reference.slf4j-api-1.7.7.jar=lib\\quartz\\slf4j-api-1.7.7.jar
-file.reference.slf4j-log4j12-1.7.7.jar=lib\\quartz\\slf4j-log4j12-1.7.7.jar
+file.reference.log4j-1.2.16.jar=lib/quartz/log4j-1.2.16.jar
+file.reference.quartz-2.2.2.jar=lib/quartz/quartz-2.2.2.jar
+file.reference.quartz-jobs-2.2.2.jar=lib/quartz/quartz-jobs-2.2.2.jar
+file.reference.slf4j-api-1.7.7.jar=lib/quartz/slf4j-api-1.7.7.jar
+file.reference.slf4j-log4j12-1.7.7.jar=lib/quartz/slf4j-log4j12-1.7.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -70,7 +70,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=googlebiasscrape.ScrapeIt
+main.class=biasscrape.ScrapeIt
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
